--- a/services/web-ui/src/index.html
+++ b/services/web-ui/src/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>PayTim WebUI</title>
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>-->
+<script src="guard.js"></script>
 </head>
 <body>
 <h1>PayTim</h1>
