--- a/services/web-ui/src/index.html
+++ b/services/web-ui/src/index.html
@@ -1,44 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
-<meta charset="UTF-8">
-<title>PayTim WebUI</title>
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <meta charset="UTF-8">
+  <title>PayTim WebUI</title>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
-<h1>PayTim</h1>
+  <h1>PayTim</h1>
 
-<!-- Kontostand abfragen -->
-<div>
-  <h2>Kontostand abfragen</h2>
-  <input id="accountId" placeholder="Account ID">
-  <button onclick="getBalance()">Abfragen</button>
-  <div id="balanceResult"></div>
-</div>
+  <div id="login">
+    <h2>Account wählen</h2>
+    <input id="loginAccountId" placeholder="Account ID" />
+    <button onclick="login()">Login</button>
+  </div>
 
-<!-- Transfer -->
-<div>
-  <h2>Transfer</h2>
-  <input id="fromAccount" placeholder="Von Account ID">
-  <input id="toAccount" placeholder="Zu Account ID">
-  <input id="amount" placeholder="Betrag" type="number">
-  <button onclick="transfer()">Senden</button>
-  <div id="transferResult"></div>
-</div>
+  <div id="app" style="display:none;">
+    <h2 id="welcome"></h2>
+    <div>Balance: <span id="balance"></span></div>
 
-<!-- Neuer Nutzer -->
-<h2>Neuen Nutzer erstellen</h2>
-<form id="userForm">
-  <input type="text" id="userName" placeholder="Name" required />
-  <input type="text" id="userId" placeholder="User ID (optional)" />
-  <input type="number" id="startBalance" placeholder="Startbalance" />
-  <button type="button" onclick="createUser()">User erstellen</button>
-</form>
+    <h3>Transfer</h3>
+    <input id="fromAccount" disabled />
+    <input id="toAccount" placeholder="Empfänger Account ID" />
+    <input id="amount" type="number" placeholder="Betrag" />
+    <button onclick="transfer()">Senden</button>
+    <div id="transferResult"></div>
+  </div>
 
-<!-- Alle Nutzer -->
-<h3>Alle Nutzer</h3>
-<div id="userList"></div>
-
-<script src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
+
