feat: add account creation to web UI

--- a/services/web-ui/src/index.html
+++ b/services/web-ui/src/index.html
@@ -8,6 +8,14 @@
 <body>
   <h1>PayTim</h1>
 
+  <div id="register">
+    <h2>Account erstellen</h2>
+    <input id="newUserName" placeholder="Name" />
+    <input id="newUserBalance" type="number" placeholder="Startguthaben" />
+    <button onclick="createAccount()">Erstellen</button>
+    <div id="newAccountInfo"></div>
+  </div>
+
   <div id="login">
     <h2>Account wählen</h2>
     <input id="loginAccountId" placeholder="Account ID" />
